Les 9 changes - Niet werkend

--- a/src/main/webapp/weather.html
+++ b/src/main/webapp/weather.html
@@ -8,6 +8,16 @@
 		<link rel="stylesheet" type="text/css" href="css/index.css">
 	</head>
 	<body>
+		
+		<h2 class="accordion">Login</h2>
+		<div class="panel">	
+			<form id="loginform">
+				Gebruikersnaam:<input id="username" type="text" name="username" value="stefan">
+				Wachtwoord:<input id="password" type="password" name="password" value="test1">
+				<input type="button" value="login" id="login"> 
+			</form>
+		</div>
+	
 		<div id="frame">
 			<div id="myLocation">
 				<h2>Mijn Locatie</h2>
