Les 9 changes - Werkende code

--- a/src/main/webapp/weather.html
+++ b/src/main/webapp/weather.html
@@ -61,7 +61,7 @@
 				<label for="zonsopgang">Zonsopgang:</label>
 				<label id="zonsopgang" ></label><br/>
 						
-				<label for="zonsondergang">zonsondergang:</label>
+				<label for="zonsondergang">Zonsondergang:</label>
 				<label id="zonsondergang" ></label><br/><br/>
 				
 				<button id="my_weather" class="button button1">Mijn locatie</button>
